[package]
name = "cm2html-gnu-sh"
version = "0.1.0"
authors = ["Murayama Toshiyuki (T.MURACHI) <harapekomurachi@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
