[package]
name = "cm2html-ts"
version = "0.1.0"
authors = ["Murayama Toshiyuki (T.MURACHI) <harapekomurachi@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
